fix(select): properly align label with select in item in md
fixes #19887

--- a/core/src/components/select/select.scss
+++ b/core/src/components/select/select.scss
@@ -76,7 +76,7 @@ button {
 
 .select-icon-inner {
   @include position(50%, null, null, 5px);
-  @include margin(-3px, null, null, null);
+  @include margin(-2px, null, null, null);
 
   position: absolute;
 
